--- a/sourse/blocks/site/__fonts.styl
+++ b/sourse/blocks/site/__fonts.styl
@@ -1,17 +1,29 @@
 @font-face
   font-family 'Aleo'
-  src: url('fonts/Regular/aleo-regular-webfont.woff2') format('woff2'),
-          url('fonts/Regular/aleo-regular-webfont.ttf')  format('truetype'),
-          url('fonts/Regular/aleo-regular-webfont.woff') format('woff')
-  font-weight normal
+  src url('fonts/Light/aleo-light-webfont.woff2') format('woff2'), url('fonts/Light/aleo-light-webfont.ttf')  format('truetype'), url('fonts/Light/aleo-light-webfont.woff') format('woff')
+  font-weight lighter
   font-style normal
 
 @font-face
   font-family 'Aleo'
-  src: url('fonts/Light/aleo-light-webfont.woff2') format('woff2'),
-          url('fonts/Light/aleo-light-webfont.ttf')  format('truetype'),
-          url('fonts/Light/aleo-light-webfont.woff') format('woff')
-  font-weight lighter
+  src url('fonts/Bold/aleo-bold-webfont.woff2') format('woff2'), url('fonts/Bold/aleo-bold-webfont.ttf')  format('truetype'), url('fonts/Bold/aleo-bold-webfont.woff') format('woff')
+  font-weight bold
   font-style normal
 
+@font-face
+  font-family 'Aleo'
+  src url('fonts/Regular Italic/aleo-italic-webfont.woff2') format('woff2'), url('fonts/Regular Italic/aleo-italic-webfont.ttf')  format('truetype'), url('fonts/Regular Italic/aleo-italic-webfont.woff') format('woff')
+  font-weight normal
+  font-style italic
 
+@font-face
+  font-family 'Aleo'
+  src url('fonts/Regular/aleo-regular-webfont.woff2') format('woff2'), url('fonts/Regular/aleo-regular-webfont.ttf')  format('truetype'), url('fonts/Regular/aleo-regular-webfont.woff') format('woff')
+  font-weight normal
+  font-style normal
+
+@font-face
+  font-family 'ManoNegra'
+  src url('fonts/ManoNegra/WCManoNegraBta.woff2') format('woff2'), url('fonts/ManoNegra/WCManoNegraBta.woff') format('woff'), url('fonts/ManoNegra/WCManoNegraBta.ttf') format('truetype')
+  font-weight normal
+  font-style normal
