--- a/sourse/blocks/site/__global.styl
+++ b/sourse/blocks/site/__global.styl
@@ -1,24 +1,20 @@
-/*Переменные*/
-FontSize = 14px
-MaxWidth = 1200px
-
-
-/*Миксины*/
-alignBlock()
-	margin-left auto
-	margin-right auto
-
-
-/*Сброс стилей браузера для конкретных блоков*/
 article,
 section,
 div,
 nav,
-menu
+menu,
+html,
+body,
+header,
+footer,
+h1,
+p
 	margin 0
 	padding 0
 
 html
 	font-size FontSize
+	font-family Aleo
+
 	
 
