--- a/sourse/blocks/site/index.pug
+++ b/sourse/blocks/site/index.pug
@@ -1,5 +1,6 @@
 html(lang="ru")
 	include ../head/head.pug
 	body
-		h1 Hello, World Привет
-		script(src='index.js')
+		include ../__header/__header.pug
+		include ../__presntation/__presentation.pug
+		script(src='site.js')
