--- a/sourse/blocks/site/index.styl
+++ b/sourse/blocks/site/index.styl
@@ -1,6 +1,9 @@
-/** 
-* файл index.styl
-**/
-
-@require  '__fonts.styl'
+@require '__variable.styl'
+@require '__mixins.styl'
+@require '__fonts.styl'
 @require '__global.styl'
+
+
+@require '../__header/__header.styl'
+@require '../__presntation/__presntation.styl'
+
