Продолжение верстки. Добавление секции "Меню"

--- a/sourse/blocks/site/index.pug
+++ b/sourse/blocks/site/index.pug
@@ -3,4 +3,7 @@ html(lang="ru")
 	body
 		include ../__header/__header.pug
 		include ../__presntation/__presentation.pug
+		include ../__themenu/__themenu
+		include ../__gallery/__gallery
+
 		script(src='site.js')
