--- a/sourse/blocks/site/index.styl
+++ b/sourse/blocks/site/index.styl
@@ -6,4 +6,7 @@
 
 @require '../__header/__header.styl'
 @require '../__presntation/__presntation.styl'
+@require '../__themenu/__themenu.styl'
+@require '../__gallery/__gallery.styl'
+
 
