--- a/sourse/blocks/site/index.pug
+++ b/sourse/blocks/site/index.pug
@@ -4,6 +4,8 @@ html(lang="ru")
 		include ../__header/__header.pug
 		include ../__presntation/__presentation.pug
 		include ../__themenu/__themenu
+		include ../__slickSlider/__slider
 		include ../__gallery/__gallery
+		include ../__footer/__footer
 
 		script(src='site.js')
