--- a/sourse/blocks/site/index.styl
+++ b/sourse/blocks/site/index.styl
@@ -7,6 +7,9 @@
 @require '../__header/__header.styl'
 @require '../__presntation/__presntation.styl'
 @require '../__themenu/__themenu.styl'
+@require '../__slickSlider/__slickSlider.styl'
+@require '../__slickSlider/__slider.styl'
 @require '../__gallery/__gallery.styl'
+@require '../__footer/__footer.styl'
 
 
